# FourierConvolutionCUDALib

./: CMakeLists.txt  CTestLists.txt  README.md  fourierconvolutioncudalib-config-version.cmake.in  fourierconvolutioncudalib-config.cmake.in
src/: CMakeLists.txt  FourierConvolutionCUDALib_Export.h  book.h  convolution3Dfft.cu  convolution3Dfft.h  standardCUDAfunctions.cu  standardCUDAfunctions.h  traits.hpp
tests/: CMakeLists.txt  bench_gpu_convolve.cu  cufft_test.cu  cufft_test.cuh  cufft_test_r2c.cu  image_stack_utils.cpp  image_stack_utils.h  padd_utils.h  test_algorithms.hpp  test_fixtures.hpp  test_gpu_convolve.cpp  test_gpu_memory_reach.cpp  test_gpu_numerical_stability.cpp  test_how_cufft_works.cu  test_utils.hpp
