# include directories
# src directory
INCLUDE_DIRECTORIES(.)

# build and link
FIND_PACKAGE(CUDA QUIET)
CUDA_ADD_LIBRARY(${PROJECT_NAME} convolution3Dfft.cu standardCUDAfunctions.cu SHARED)
CUDA_ADD_CUFFT_TO_TARGET(${PROJECT_NAME})
IF(WIN32)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${CUDA_CUDA_LIBRARY})
ELSE()
TARGET_LINK_LIBRARIES(${PROJECT_NAME} cuda)
ENDIF()

# TODO: is this really needed
IF(APPLE)
MESSAGE("adding ${CUDA_TOOLKIT_ROOT_DIR}/lib/libcuda.dylib")
   TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${CUDA_TOOLKIT_ROOT_DIR}/lib/libcuda.dylib)
 ENDIF(APPLE)

SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES PUBLIC_HEADER "${PROJECT_SOURCE_DIR}/src/convolution3Dfft.h") 
IF(WIN32)
INSTALL(TARGETS ${PROJECT_NAME}
  EXPORT fourierconvolutioncudalib-targets 
  LIBRARY DESTINATION "${INSTALL_LIB_DIR}" #COMPONENT shlib
  ARCHIVE DESTINATION "${INSTALL_LIB_DIR}" #COMPONENT shlib
  PUBLIC_HEADER DESTINATION "${INSTALL_INCLUDE_DIR}" #COMPONENT inc
  )
ELSE(WIN32)
INSTALL(TARGETS ${PROJECT_NAME}
  EXPORT fourierconvolutioncudalib-targets 
  LIBRARY DESTINATION "${INSTALL_LIB_DIR}" #COMPONENT shlib
  PUBLIC_HEADER DESTINATION "${INSTALL_INCLUDE_DIR}" #COMPONENT inc
  )
ENDIF(WIN32)




